# mStreaming

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
mSteaming/: client.py  config.py  main.py
mSteaming/middlewares/: __init__.py  ratelimiter.py
mSteaming/models/: __init__.py  videoMetadata.py
mSteaming/routers/: __init__.py  videoRouter.py
mSteaming/service/: __init__.py  fileService.py  videoService.py
mSteaming/templates/: index.html
