[tool.poetry]
name = "msteaming"
version = "0.1.0"
description = ""
authors = ["Mohamed Ramdane DEBIANE <M.debiane71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
jinja2 = "^3.1.3"
aiofile = "^3.8.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
flake8-pytest-style = "^2.0.0"
wemake-python-styleguide = "^0.19.2"
safety = "^3.1.0"
pre-commit = "^3.7.0"
nitpick = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
